--- a/main-site/package.json
+++ b/main-site/package.json
@@ -7,11 +7,11 @@
     "dependencies": {
         "@enginehub/shared": "1.0.0",
         "@svgr/webpack": "^6.2.1",
-        "@types/styled-components": "^5.1.23",
-        "gatsby": "^4.7.2",
-        "gatsby-plugin-google-analytics": "^4.7.0",
-        "gatsby-plugin-image": "^2.7.0",
-        "gatsby-plugin-styled-components": "^5.7.0",
+        "@types/styled-components": "^5.1.24",
+        "gatsby": "^4.9.3",
+        "gatsby-plugin-google-analytics": "^4.9.0",
+        "gatsby-plugin-image": "^2.9.1",
+        "gatsby-plugin-styled-components": "^5.9.0",
         "gatsby-plugin-svgr": "^3.0.0-beta.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -20,39 +20,33 @@
         "styled-components": "^5.3.3"
     },
     "devDependencies": {
-        "@types/react": "^17.0.39",
+        "@types/react": "^17.0.40",
         "@types/react-helmet": "^6.1.5",
-        "@typescript-eslint/eslint-plugin": "^5.12.0",
-        "@typescript-eslint/parser": "^5.12.0",
-        "eslint": "^8.9.0",
-        "eslint-config-prettier": "^8.3.0",
+        "@typescript-eslint/eslint-plugin": "^5.14.0",
+        "@typescript-eslint/parser": "^5.14.0",
+        "eslint": "^8.11.0",
+        "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.28.0",
+        "eslint-plugin-react": "^7.29.3",
         "eslint-plugin-react-hooks": "^4.3.0",
-        "gatsby-plugin-manifest": "^4.7.0",
+        "gatsby-plugin-manifest": "^4.9.1",
         "gatsby-plugin-netlify": "^4.1.0",
-        "gatsby-plugin-react-helmet": "^5.7.0",
+        "gatsby-plugin-react-helmet": "^5.9.0",
         "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
         "gatsby-plugin-robots-txt": "^1.7.0",
-        "gatsby-plugin-sharp": "^4.7.0",
-        "gatsby-plugin-sitemap": "^5.7.0",
-        "gatsby-source-filesystem": "^4.7.0",
-        "gatsby-transformer-sharp": "^4.7.0",
-        "lint-staged": "^12.3.4",
+        "gatsby-plugin-sharp": "^4.9.1",
+        "gatsby-plugin-sitemap": "^5.9.0",
+        "gatsby-source-filesystem": "^4.9.1",
+        "gatsby-transformer-sharp": "^4.9.0",
         "prettier": "^2.5.1",
         "tsconfig": "^7.0.0",
-        "typescript": "^4.5.5"
+        "typescript": "^4.6.2"
     },
-    "keywords": [
-        "gatsby",
-        "enginehub",
-        "worldedit",
-        "worldguard",
-        "craftbook"
-    ],
+    "keywords": ["gatsby", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
         "build": "gatsby build",
         "develop": "gatsby develop",
+        "clean": "gatsby clean",
         "format": "prettier --write src/**/*.{js,jsx}",
         "start": "npm run develop",
         "serve": "gatsby serve",
