--- a/builds/package.json
+++ b/builds/package.json
@@ -6,9 +6,9 @@
     "author": "EngineHub",
     "dependencies": {
         "@enginehub/shared": "1.0.0",
-        "@fortawesome/fontawesome-svg-core": "^1.3.0",
-        "@fortawesome/free-solid-svg-icons": "^6.0.0",
-        "@fortawesome/react-fontawesome": "^0.1.17",
+        "@fortawesome/fontawesome-svg-core": "^6.1.0",
+        "@fortawesome/free-solid-svg-icons": "^6.1.0",
+        "@fortawesome/react-fontawesome": "^0.1.18",
         "@types/styled-components": "^5.1.24",
         "axios": "^0.26.1",
         "moment": "^2.29.1",
@@ -21,12 +21,13 @@
     },
     "devDependencies": {
         "@types/node": "^17.0.21",
-        "@types/react": "^17.0.40",
-        "@types/react-dom": "^17.0.13",
+        "@types/react": "^17.0.41",
+        "@types/react-dom": "^17.0.14",
+        "eslint": "^8.11.0",
         "eslint-config-next": "12.1.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
-        "prettier": "^2.5.1",
+        "prettier": "^2.6.0",
         "typescript": "^4.6.2"
     },
     "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
