--- a/golf/package.json
+++ b/golf/package.json
@@ -7,14 +7,14 @@
     "dependencies": {
         "@enginehub/schematicwebviewer": "^4.2.0",
         "@enginehub/shared": "1.0.0",
-        "@fortawesome/fontawesome-svg-core": "^1.3.0",
-        "@fortawesome/free-solid-svg-icons": "^6.0.0",
-        "@fortawesome/react-fontawesome": "^0.1.17",
+        "@fortawesome/fontawesome-svg-core": "^6.1.0",
+        "@fortawesome/free-solid-svg-icons": "^6.1.0",
+        "@fortawesome/react-fontawesome": "^0.1.18",
         "@google-cloud/firestore": "^5.0.2",
         "@types/styled-components": "^5.1.24",
         "axios": "^0.26.1",
         "bcrypt": "^5.0.1",
-        "got": "^12.0.1",
+        "got": "^12.0.2",
         "gzip-js": "^0.3.2",
         "jsonwebtoken": "^8.5.1",
         "next": "^12.1.0",
@@ -30,14 +30,15 @@
         "@types/gzip-js": "^0.3.3",
         "@types/jsonwebtoken": "^8.5.8",
         "@types/node": "^17.0.21",
-        "@types/react": "^17.0.40",
-        "@types/react-dom": "^17.0.13",
+        "@types/react": "^17.0.41",
+        "@types/react-dom": "^17.0.14",
         "@types/safe-compare": "^1.1.0",
         "@types/shortid": "^0.0.29",
+        "eslint": "^8.11.0",
         "eslint-config-next": "^12.1.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
-        "prettier": "^2.5.1",
+        "prettier": "^2.6.0",
         "typescript": "^4.6.2"
     },
     "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
