--- a/builds/package.json
+++ b/builds/package.json
@@ -10,25 +10,25 @@
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
         "@fortawesome/react-fontawesome": "^0.1.18",
         "@types/styled-components": "^5.1.25",
-        "axios": "^0.26.1",
+        "axios": "^0.27.2",
         "moment": "^2.29.3",
-        "next": "^12.1.5",
+        "next": "^12.1.6",
         "next-images": "^1.8.4",
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
         "react-helmet": "^6.1.0",
         "styled-components": "^5.3.5"
     },
     "devDependencies": {
-        "@types/node": "^17.0.25",
-        "@types/react": "^17.0.44",
-        "@types/react-dom": "^17.0.15",
-        "eslint": "^8.14.0",
-        "eslint-config-next": "12.1.5",
+        "@types/node": "^17.0.32",
+        "@types/react": "17.0.44",
+        "@types/react-dom": "17.0.15",
+        "eslint": "^8.15.0",
+        "eslint-config-next": "12.1.6",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "prettier": "^2.6.2",
-        "typescript": "^4.6.3"
+        "typescript": "^4.6.4"
     },
     "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
