--- a/golf/package.json
+++ b/golf/package.json
@@ -12,14 +12,14 @@
         "@fortawesome/react-fontawesome": "^0.1.18",
         "@google-cloud/firestore": "^5.0.2",
         "@types/styled-components": "^5.1.25",
-        "axios": "^0.26.1",
+        "axios": "^0.27.2",
         "bcrypt": "^5.0.1",
-        "got": "^12.0.3",
+        "got": "^12.0.4",
         "gzip-js": "^0.3.2",
         "jsonwebtoken": "^8.5.1",
-        "next": "^12.1.5",
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
+        "next": "^12.1.6",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
         "react-helmet": "^6.1.0",
         "safe-compare": "^1.1.4",
         "shortid": "^2.2.16",
@@ -29,17 +29,17 @@
     "devDependencies": {
         "@types/gzip-js": "^0.3.3",
         "@types/jsonwebtoken": "^8.5.8",
-        "@types/node": "^17.0.25",
-        "@types/react": "^17.0.44",
-        "@types/react-dom": "^17.0.15",
+        "@types/node": "^17.0.32",
+        "@types/react": "17.0.44",
+        "@types/react-dom": "17.0.15",
         "@types/safe-compare": "^1.1.0",
         "@types/shortid": "^0.0.29",
-        "eslint": "^8.14.0",
-        "eslint-config-next": "^12.1.5",
+        "eslint": "^8.15.0",
+        "eslint-config-next": "^12.1.6",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "prettier": "^2.6.2",
-        "typescript": "^4.6.3"
+        "typescript": "^4.6.4"
     },
     "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
