--- a/paste/package.json
+++ b/paste/package.json
@@ -7,25 +7,25 @@
     "dependencies": {
         "@enginehub/schematicwebviewer": "^4.2.0",
         "@enginehub/shared": "1.0.0",
-        "@google-cloud/storage": "^5.19.3",
+        "@google-cloud/storage": "^5.19.4",
         "@types/styled-components": "^5.1.25",
-        "axios": "^0.26.1",
+        "axios": "^0.27.2",
         "base64-js": "^1.5.1",
-        "next": "^12.1.5",
+        "next": "^12.1.6",
         "next-images": "^1.8.4",
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
         "react-helmet": "^6.1.0",
         "shortid": "^2.2.16",
         "styled-components": "^5.3.5"
     },
     "devDependencies": {
-        "@types/node": "^17.0.25",
-        "@types/react": "^17.0.44",
-        "@types/react-dom": "^17.0.15",
+        "@types/node": "^17.0.32",
+        "@types/react": "17.0.44",
+        "@types/react-dom": "17.0.15",
         "@types/shortid": "^0.0.29",
-        "eslint": "^8.14.0",
-        "eslint-config-next": "^12.1.5",
+        "eslint": "^8.15.0",
+        "eslint-config-next": "^12.1.6",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "prettier": "^2.6.2"
