--- a/shared/package.json
+++ b/shared/package.json
@@ -7,29 +7,30 @@
     "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "dependencies": {
-        "@types/styled-components": "^5.1.25",
-        "polished": "^4.2.2",
-        "react": "^18.0.0",
-        "react-dom": "^18.0.0",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
+        "react-helmet": "^6.1.0",
         "styled-components": "^5.3.5"
     },
     "devDependencies": {
-        "@types/node": "^17.0.25",
-        "@types/react": "^17.0.44",
-        "@types/react-dom": "^17.0.15",
-        "@typescript-eslint/eslint-plugin": "^5.20.0",
-        "@typescript-eslint/parser": "^5.20.0",
-        "eslint": "^8.14.0",
+        "@types/node": "^17.0.32",
+        "@types/react": "17.0.44",
+        "@types/react-dom": "17.0.15",
+        "@types/react-helmet": "^6.1.5",
+        "@types/styled-components": "^5.1.25",
+        "@typescript-eslint/eslint-plugin": "^5.23.0",
+        "@typescript-eslint/parser": "^5.23.0",
+        "eslint": "^8.15.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.29.4",
-        "eslint-plugin-react-hooks": "^4.4.0",
+        "eslint-plugin-react-hooks": "^4.5.0",
         "prettier": "^2.6.2",
         "source-map-loader": "^3.0.1",
-        "ts-loader": "^9.2.8",
+        "ts-loader": "^9.3.0",
         "tsconfig": "^7.0.0",
-        "typescript": "^4.6.3",
-        "webpack": "^5.61.0",
+        "typescript": "^4.6.4",
+        "webpack": "5.68.0",
         "webpack-cli": "^4.9.2"
     },
     "keywords": [
@@ -42,7 +43,7 @@
         "type-check": "tsc --project ./tsconfig.json --noEmit",
         "lint": "eslint --config ./.eslintrc.js --ext .ts,.tsx src/",
         "lint:fix": "eslint --config ./.eslintrc.js --fix --ext .ts,.tsx src/",
-        "prepare": "npx webpack",
-        "build": "npx webpack"
+        "prepare": "webpack",
+        "build": "webpack"
     }
 }
