--- a/shared/package.json
+++ b/shared/package.json
@@ -14,13 +14,13 @@
     },
     "devDependencies": {
         "@types/node": "^17.0.45",
-        "@types/react": "17.0.45",
+        "@types/react": "17.0.48",
         "@types/react-dom": "17.0.17",
         "@types/react-helmet": "^6.1.5",
         "@types/styled-components": "^5.1.25",
-        "@typescript-eslint/eslint-plugin": "^5.30.0",
-        "@typescript-eslint/parser": "^5.30.0",
-        "eslint": "^8.18.0",
+        "@typescript-eslint/eslint-plugin": "^5.33.0",
+        "@typescript-eslint/parser": "^5.33.0",
+        "eslint": "^8.21.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.30.1",
@@ -46,5 +46,5 @@
         "prepare": "webpack",
         "build": "webpack"
     },
-    "sideEffect": false
+    "sideEffects": false
 }
