--- a/main-site/package.json
+++ b/main-site/package.json
@@ -8,21 +8,16 @@
         "@enginehub/shared": "1.0.0",
         "@svgr/webpack": "^6.3.1",
         "@types/styled-components": "^5.1.25",
-        "gatsby": "^4.20.0",
-        "gatsby-plugin-google-analytics": "^4.20.0",
-        "gatsby-plugin-image": "^2.20.0",
-        "gatsby-plugin-styled-components": "^5.20.0",
-        "gatsby-plugin-svgr": "^3.0.0-beta.0",
+        "next": "^12.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-helmet": "^6.1.0",
         "smooth-scroll": "^16.1.3",
         "styled-components": "^5.3.5"
     },
     "devDependencies": {
+        "@next/eslint-plugin-next": "^12.2.4",
         "@types/react": "17.0.48",
         "@types/react-dom": "17.0.17",
-        "@types/react-helmet": "^6.1.5",
         "@typescript-eslint/eslint-plugin": "^5.33.0",
         "@typescript-eslint/parser": "^5.33.0",
         "eslint": "^8.21.0",
@@ -30,30 +25,19 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "gatsby-plugin-manifest": "^4.20.0",
-        "gatsby-plugin-netlify": "^5.0.1",
-        "gatsby-plugin-react-helmet": "^5.20.0",
-        "gatsby-plugin-react-helmet-canonical-urls": "^1.4.0",
-        "gatsby-plugin-robots-txt": "^1.7.1",
-        "gatsby-plugin-sharp": "^4.20.0",
-        "gatsby-plugin-sitemap": "^5.20.0",
-        "gatsby-source-filesystem": "^4.20.0",
-        "gatsby-transformer-sharp": "^4.20.0",
         "prettier": "^2.7.1",
         "tsconfig": "^7.0.0",
         "typescript": "^4.7.4"
     },
     "keywords": ["gatsby", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
-        "build": "gatsby build",
-        "develop": "gatsby develop",
-        "clean": "gatsby clean",
-        "format": "prettier --write src/**/*.{js,jsx}",
-        "start": "npm run develop",
-        "serve": "gatsby serve",
-        "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
-        "type-check": "tsc --project ./tsconfig.json --noEmit",
-        "lint": "eslint --config ./.eslintrc.js --ext .ts,.tsx src/",
-        "lint:fix": "eslint --config ./.eslintrc.js --fix --ext .ts,.tsx src/"
+        "build": "yarn next build",
+        "dev": "yarn next dev",
+        "format": "yarn prettier --write src/**/*.{js,jsx}",
+        "start": "yarn next start",
+        "test": "echo \"Write tests!\"",
+        "type-check": "yarn tsc --project ./tsconfig.json --noEmit",
+        "lint": "yarn next lint",
+        "lint:fix": "yarn next lint --fix"
     }
 }
