--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
-    "name": "enginehub-websites",
-    "private": true,
-    "main": "index.js",
-    "description": "EngineHub Websites",
-    "version": "1.0.0",
-    "author": "EngineHub",
-    "workspaces": [
-        "main-site",
-        "builds",
-        "paste",
-        "golf",
-        "shared"
-    ],
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/EngineHub/enginehub-website"
-    },
-    "dependencies": {
-        "husky": "^8.0.1",
-        "lint-staged": "^13.0.3",
-        "patch-package": "^6.4.7",
-        "postinstall-postinstall": "^2.1.0"
-    },
-    "scripts": {
-        "postinstall": "husky install && patch-package",
-        "prepare": "husky install",
-        "precommit": "lint-staged"
-    },
-    "packageManager": "yarn@3.2.0"
+  "name": "enginehub-websites",
+  "private": true,
+  "main": "index.js",
+  "description": "EngineHub Websites",
+  "version": "1.0.0",
+  "author": "EngineHub",
+  "workspaces": [
+    "main-site",
+    "builds",
+    "paste",
+    "golf",
+    "shared"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/EngineHub/enginehub-website"
+  },
+  "dependencies": {
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0"
+  },
+  "scripts": {
+    "postinstall": "husky install && patch-package",
+    "prepare": "husky install",
+    "precommit": "lint-staged"
+  },
+  "resolutions": {
+    "@types/react": "^17"
+  },
+  "packageManager": "yarn@3.2.0"
 }
