--- a/shared/package.json
+++ b/shared/package.json
@@ -6,17 +6,11 @@
     "author": "EngineHub",
     "main": "./dist/index.esm.js",
     "types": "./dist/index.d.ts",
-    "dependencies": {
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-helmet": "^6.1.0",
-        "styled-components": "^5.3.5"
-    },
     "devDependencies": {
+        "@next/eslint-plugin-next": "^12.2.4",
         "@types/node": "^17.0.45",
         "@types/react": "17.0.48",
         "@types/react-dom": "17.0.17",
-        "@types/react-helmet": "^6.1.5",
         "@types/styled-components": "^5.1.25",
         "@typescript-eslint/eslint-plugin": "^5.33.0",
         "@typescript-eslint/parser": "^5.33.0",
@@ -46,5 +40,11 @@
         "prepare": "webpack",
         "build": "webpack"
     },
-    "sideEffects": false
+    "sideEffects": false,
+    "peerDependencies": {
+        "next": "*",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "styled-components": "^5.3.5"
+    }
 }
