--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
   "dependencies": {
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0"
   },
   "scripts": {
-    "postinstall": "husky install && patch-package",
+    "postinstall": "husky install",
     "prepare": "husky install",
     "precommit": "lint-staged"
   },
