--- a/shared/package.json
+++ b/shared/package.json
@@ -41,8 +41,8 @@
         "build": "webpack"
     },
     "sideEffects": false,
-    "peerDependencies": {
-        "next": "*",
+    "dependencies": {
+        "next": "^12.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "styled-components": "^5.3.5"
