--- a/shared/package.json
+++ b/shared/package.json
@@ -4,7 +4,7 @@
     "description": "Shared libs for the EngineHub sites",
     "version": "1.0.0",
     "author": "EngineHub",
-    "main": "./dist/index.esm.js",
+    "main": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "devDependencies": {
         "@next/eslint-plugin-next": "^12.2.4",
@@ -20,12 +20,7 @@
         "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "prettier": "^2.7.1",
-        "source-map-loader": "^4.0.0",
-        "ts-loader": "^9.3.1",
-        "tsconfig": "^7.0.0",
-        "typescript": "^4.7.4",
-        "webpack": "5.68.0",
-        "webpack-cli": "^4.10.0"
+        "typescript": "^4.7.4"
     },
     "keywords": [
         "enginehub",
@@ -37,8 +32,8 @@
         "type-check": "tsc --project ./tsconfig.json --noEmit",
         "lint": "eslint --config ./.eslintrc.js --ext .ts,.tsx src/",
         "lint:fix": "eslint --config ./.eslintrc.js --fix --ext .ts,.tsx src/",
-        "prepare": "webpack",
-        "build": "webpack"
+        "prepare": "yarn build",
+        "build": "yarn tsc --project ./tsconfig.json"
     },
     "sideEffects": false,
     "dependencies": {
