--- a/paste/package.json
+++ b/paste/package.json
@@ -8,12 +8,11 @@
         "@enginehub/schematicjs": "^0.8.0",
         "@enginehub/schematicwebviewer": "^4.3.0",
         "@enginehub/shared": "1.0.0",
-        "@google-cloud/storage": "^6.3.0",
-        "@types/styled-components": "^5.1.25",
+        "@google-cloud/storage": "^6.4.0",
+        "@types/styled-components": "^5.1.26",
         "axios": "^0.27.2",
         "base64-js": "^1.5.1",
         "next": "^12.2.4",
-        "next-images": "^1.8.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "shortid": "^2.2.16",
@@ -28,7 +27,8 @@
         "eslint-config-next": "^12.2.4",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "prettier": "^2.7.1"
+        "prettier": "^2.7.1",
+        "typescript": "^4.7.4"
     },
     "keywords": [
         "pastebin",
@@ -38,12 +38,12 @@
         "craftbook"
     ],
     "scripts": {
-        "dev": "next",
+        "dev": "yarn next",
         "clean": "rm -rf build",
-        "build": "next build",
-        "start": "next start -p $PORT",
-        "type-check": "tsc --project ./tsconfig.json --noEmit",
-        "lint": "next lint",
-        "lint:fix": "next lint --fix"
+        "build": "yarn next build",
+        "start": "yarn next start -p $PORT",
+        "type-check": "yarn tsc --project ./tsconfig.json --noEmit",
+        "lint": "yarn next lint",
+        "lint:fix": "yarn next lint --fix"
     }
 }
