--- a/shared/package.json
+++ b/shared/package.json
@@ -21,6 +21,7 @@
         "eslint-plugin-react": "^7.31.10",
         "eslint-plugin-react-hooks": "^4.6.0",
         "prettier": "^2.7.1",
+        "tslib": "^2.4.1",
         "typescript": "^4.8.4"
     },
     "keywords": [
