--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,32 @@
 {
-    "compilerOptions": {
-        "baseUrl": ".",
-        "allowJs": true,
-        "forceConsistentCasingInFileNames": true,
-        "noImplicitReturns": true,
-        "noImplicitAny": true,
-        "noUnusedParameters": true,
-        "importHelpers": true,
-        "strictNullChecks": true,
-        "suppressImplicitAnyIndexErrors": true,
-        "noUnusedLocals": true,
-        "resolveJsonModule": true,
-        "experimentalDecorators": true,
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "strict": true
-    },
-    "exclude": ["node_modules"],
-    "include": [
-        "main-site/src/**/*",
-        "builds/src/**/*",
-        "builds/pages/**/*",
-        "paste/pages/**/*",
-        "paste/src/**/*",
-        "golf/pages/**/*",
-        "golf/src/**/*",
-        "shared/src/**/*"
-    ]
+  "compilerOptions": {
+    "baseUrl": ".",
+    "allowJs": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noImplicitAny": true,
+    "noUnusedParameters": true,
+    "importHelpers": true,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": true,
+    "resolveJsonModule": true,
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "noEmit": true,
+    "jsx": "react-jsx"
+  },
+  "exclude": ["node_modules"],
+  "include": [
+    "main-site/src/**/*",
+    "builds/src/**/*",
+    "builds/pages/**/*",
+    "paste/pages/**/*",
+    "paste/src/**/*",
+    "golf/pages/**/*",
+    "golf/src/**/*",
+    "shared/src/**/*"
+  ]
 }
