--- a/builds/package.json
+++ b/builds/package.json
@@ -6,27 +6,28 @@
     "author": "EngineHub",
     "dependencies": {
         "@enginehub/shared": "1.0.0",
-        "@fortawesome/fontawesome-svg-core": "^6.2.0",
-        "@fortawesome/free-solid-svg-icons": "^6.2.0",
+        "@fortawesome/fontawesome-svg-core": "^6.2.1",
+        "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@types/styled-components": "^5.1.26",
-        "axios": "^1.1.3",
+        "got": "^12.5.3",
         "moment": "^2.29.4",
-        "next": "^13.0.2",
+        "next": "^13.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "sharp": "^0.31.3",
         "styled-components": "^5.3.6"
     },
     "devDependencies": {
-        "@types/node": "^18.11.9",
-        "@types/react": "18.0.25",
-        "@types/react-dom": "18.0.8",
-        "eslint": "^8.26.0",
-        "eslint-config-next": "13.0.2",
+        "@types/node": "^18.11.18",
+        "@types/react": "18.0.26",
+        "@types/react-dom": "18.0.10",
+        "eslint": "^8.30.0",
+        "eslint-config-next": "13.1.1",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "prettier": "^2.7.1",
-        "typescript": "^4.8.4"
+        "prettier": "^2.8.1",
+        "typescript": "^4.9.4"
     },
     "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
