--- a/golf/package.json
+++ b/golf/package.json
@@ -5,40 +5,40 @@
     "version": "1.0.0",
     "author": "EngineHub",
     "dependencies": {
-        "@enginehub/schematicwebviewer": "^4.3.1",
+        "@enginehub/schematicwebviewer": "^4.4.0",
         "@enginehub/shared": "1.0.0",
-        "@fortawesome/fontawesome-svg-core": "^6.2.0",
-        "@fortawesome/free-solid-svg-icons": "^6.2.0",
+        "@fortawesome/fontawesome-svg-core": "^6.2.1",
+        "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@google-cloud/firestore": "^6.4.1",
         "@types/styled-components": "^5.1.26",
-        "axios": "^1.1.3",
         "bcrypt": "^5.1.0",
-        "got": "^12.5.2",
+        "got": "^12.5.3",
         "gzip-js": "^0.3.2",
-        "jsonwebtoken": "^8.5.1",
-        "next": "^13.0.2",
+        "jsonwebtoken": "^9.0.0",
+        "next": "^13.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "safe-compare": "^1.1.4",
+        "sharp": "^0.31.3",
         "shortid": "^2.2.16",
         "styled-components": "^5.3.6",
         "zlibt": "0.0.5"
     },
     "devDependencies": {
         "@types/gzip-js": "^0.3.3",
-        "@types/jsonwebtoken": "^8.5.9",
-        "@types/node": "^18.11.9",
-        "@types/react": "18.0.25",
-        "@types/react-dom": "18.0.8",
+        "@types/jsonwebtoken": "^9.0.0",
+        "@types/node": "^18.11.18",
+        "@types/react": "18.0.26",
+        "@types/react-dom": "18.0.10",
         "@types/safe-compare": "^1.1.0",
         "@types/shortid": "^0.0.29",
-        "eslint": "^8.26.0",
-        "eslint-config-next": "^13.0.2",
+        "eslint": "^8.30.0",
+        "eslint-config-next": "^13.1.1",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "prettier": "^2.7.1",
-        "typescript": "^4.8.4"
+        "prettier": "^2.8.1",
+        "typescript": "^4.9.4"
     },
     "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
