--- a/main-site/package.json
+++ b/main-site/package.json
@@ -7,25 +7,26 @@
     "dependencies": {
         "@enginehub/shared": "1.0.0",
         "@types/styled-components": "^5.1.26",
-        "next": "^13.0.2",
+        "next": "^13.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "sharp": "^0.31.3",
         "smooth-scroll": "^16.1.3",
         "styled-components": "^5.3.6"
     },
     "devDependencies": {
-        "@next/eslint-plugin-next": "^13.0.2",
-        "@types/react": "18.0.25",
-        "@types/react-dom": "18.0.8",
-        "@typescript-eslint/eslint-plugin": "^5.42.0",
-        "@typescript-eslint/parser": "^5.42.0",
-        "eslint": "^8.26.0",
+        "@next/eslint-plugin-next": "^13.1.1",
+        "@types/react": "18.0.26",
+        "@types/react-dom": "18.0.10",
+        "@typescript-eslint/eslint-plugin": "^5.47.1",
+        "@typescript-eslint/parser": "^5.47.1",
+        "eslint": "^8.30.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-react": "^7.31.10",
+        "eslint-plugin-react": "^7.31.11",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "prettier": "^2.7.1",
-        "typescript": "^4.8.4"
+        "prettier": "^2.8.1",
+        "typescript": "^4.9.4"
     },
     "keywords": ["gatsby", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
