--- a/paste/package.json
+++ b/paste/package.json
@@ -6,29 +6,29 @@
     "author": "EngineHub",
     "dependencies": {
         "@enginehub/schematicjs": "^0.8.0",
-        "@enginehub/schematicwebviewer": "^4.3.1",
+        "@enginehub/schematicwebviewer": "^4.4.0",
         "@enginehub/shared": "1.0.0",
-        "@google-cloud/storage": "^6.7.0",
+        "@google-cloud/storage": "^6.8.0",
         "@types/styled-components": "^5.1.26",
-        "axios": "^1.1.3",
         "base64-js": "^1.5.1",
-        "next": "^13.0.2",
+        "next": "^13.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "sharp": "^0.31.3",
         "shortid": "^2.2.16",
         "styled-components": "^5.3.6"
     },
     "devDependencies": {
-        "@types/node": "^18.11.9",
-        "@types/react": "18.0.25",
-        "@types/react-dom": "18.0.8",
+        "@types/node": "^18.11.18",
+        "@types/react": "18.0.26",
+        "@types/react-dom": "18.0.10",
         "@types/shortid": "^0.0.29",
-        "eslint": "^8.26.0",
-        "eslint-config-next": "^13.0.2",
+        "eslint": "^8.30.0",
+        "eslint-config-next": "^13.1.1",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "prettier": "^2.7.1",
-        "typescript": "^4.8.4"
+        "prettier": "^2.8.1",
+        "typescript": "^4.9.4"
     },
     "keywords": [
         "pastebin",
