--- a/golf/package.json
+++ b/golf/package.json
@@ -4,41 +4,39 @@
     "description": "EngineHub builds site, builds.enginehub.org",
     "version": "1.0.0",
     "author": "EngineHub",
+    "type": "module",
     "dependencies": {
         "@enginehub/schematicwebviewer": "^4.6.0",
-        "@enginehub/shared": "1.0.0",
+        "@enginehub/shared": "workspace:*",
         "@fortawesome/fontawesome-svg-core": "^6.4.0",
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
-        "@google-cloud/firestore": "^6.5.0",
-        "@types/styled-components": "^5.1.26",
+        "@google-cloud/firestore": "^6.6.1",
         "bcrypt": "^5.1.0",
-        "got": "^12.6.0",
+        "got": "^13.0.0",
         "gzip-js": "^0.3.2",
-        "jsonwebtoken": "^9.0.0",
-        "next": "^13.4.1",
+        "jsonwebtoken": "^9.0.1",
+        "next": "^13.4.9",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "safe-compare": "^1.1.4",
         "sharp": "^0.32.1",
         "shortid": "^2.2.16",
-        "styled-components": "^5.3.10",
+        "styled-components": "^6.0.2",
         "zlibt": "0.0.5"
     },
     "devDependencies": {
         "@types/gzip-js": "^0.3.3",
         "@types/jsonwebtoken": "^9.0.2",
-        "@types/node": "^18.16.5",
-        "@types/react": "18.2.6",
-        "@types/react-dom": "18.2.4",
+        "@types/node": "^18.16.19",
+        "@types/react": "18.2.14",
+        "@types/react-dom": "18.2.6",
         "@types/safe-compare": "^1.1.0",
         "@types/shortid": "^0.0.29",
-        "eslint": "^8.40.0",
-        "eslint-config-next": "^13.4.1",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "prettier": "^2.8.8",
-        "typescript": "^5.0.4"
+        "eslint": "^8.44.0",
+        "eslint-config-next": "^13.4.9",
+        "prettier": "^3.0.0",
+        "typescript": "^5.1.6"
     },
     "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
