--- a/builds/package.json
+++ b/builds/package.json
@@ -4,30 +4,28 @@
     "description": "EngineHub builds site, builds.enginehub.org",
     "version": "1.0.0",
     "author": "EngineHub",
+    "type": "module",
     "dependencies": {
-        "@enginehub/shared": "1.0.0",
+        "@enginehub/shared": "workspace:*",
         "@fortawesome/fontawesome-svg-core": "^6.4.0",
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
-        "@types/styled-components": "^5.1.26",
-        "got": "^12.6.0",
+        "got": "^13.0.0",
         "moment": "^2.29.4",
-        "next": "^13.4.1",
+        "next": "^13.4.9",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "sharp": "^0.32.1",
-        "styled-components": "^5.3.10"
+        "styled-components": "^6.0.2"
     },
     "devDependencies": {
-        "@types/node": "^18.16.5",
-        "@types/react": "18.2.6",
-        "@types/react-dom": "18.2.4",
-        "eslint": "^8.40.0",
-        "eslint-config-next": "13.4.1",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "prettier": "^2.8.8",
-        "typescript": "^5.0.4"
+        "@types/node": "^18.16.19",
+        "@types/react": "18.2.14",
+        "@types/react-dom": "18.2.6",
+        "eslint": "^8.44.0",
+        "eslint-config-next": "13.4.9",
+        "prettier": "^3.0.0",
+        "typescript": "^5.1.6"
     },
     "keywords": ["nextjs", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
