--- a/main-site/package.json
+++ b/main-site/package.json
@@ -4,29 +4,27 @@
     "description": "Main EngineHub website, enginehub.org",
     "version": "1.0.0",
     "author": "EngineHub",
+    "type": "module",
     "dependencies": {
-        "@enginehub/shared": "1.0.0",
-        "@types/styled-components": "^5.1.26",
-        "next": "^13.4.1",
+        "@enginehub/shared": "workspace:*",
+        "next": "^13.4.9",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "sharp": "^0.32.1",
         "smooth-scroll": "^16.1.3",
-        "styled-components": "^5.3.10"
+        "styled-components": "^6.0.2"
     },
     "devDependencies": {
-        "@next/eslint-plugin-next": "^13.4.1",
-        "@types/react": "18.2.6",
-        "@types/react-dom": "18.2.4",
-        "@typescript-eslint/eslint-plugin": "^5.59.2",
-        "@typescript-eslint/parser": "^5.59.2",
-        "eslint": "^8.40.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-prettier": "^4.2.1",
+        "@next/eslint-plugin-next": "^13.4.9",
+        "@types/react": "18.2.14",
+        "@types/react-dom": "18.2.6",
+        "@typescript-eslint/eslint-plugin": "^5.61.0",
+        "@typescript-eslint/parser": "^5.61.0",
+        "eslint": "^8.44.0",
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "prettier": "^2.8.8",
-        "typescript": "^5.0.4"
+        "prettier": "^3.0.0",
+        "typescript": "^5.1.6"
     },
     "keywords": ["gatsby", "enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
