chore: continue migration to css modules

--- a/golf/tsconfig.json
+++ b/golf/tsconfig.json
@@ -9,6 +9,7 @@
         "isolatedModules": true,
         "incremental": true
     },
+    "files": ["index.d.ts"],
     "include": [
         "pages/**/*",
         "src/**/*",
