--- a/golf/package.json
+++ b/golf/package.json
@@ -16,25 +16,26 @@
         "got": "^13.0.0",
         "gzip-js": "^0.3.2",
         "jsonwebtoken": "^9.0.1",
-        "next": "^13.4.9",
+        "next": "^13.4.10",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "safe-compare": "^1.1.4",
-        "sharp": "^0.32.1",
+        "sharp": "^0.32.3",
         "shortid": "^2.2.16",
-        "styled-components": "^6.0.3",
+        "styled-components": "^6.0.4",
         "zlibt": "0.0.5"
     },
     "devDependencies": {
         "@types/gzip-js": "^0.3.3",
         "@types/jsonwebtoken": "^9.0.2",
         "@types/node": "^18.16.19",
-        "@types/react": "18.2.14",
-        "@types/react-dom": "18.2.6",
+        "@types/react": "18.2.15",
+        "@types/react-dom": "18.2.7",
         "@types/safe-compare": "^1.1.0",
         "@types/shortid": "^0.0.29",
-        "eslint": "^8.44.0",
-        "eslint-config-next": "^13.4.9",
+        "eslint": "^8.45.0",
+        "eslint-config-next": "^13.4.10",
+        "postcss-preset-env": "^9.0.0",
         "prettier": "^3.0.0",
         "typescript": "^5.1.6"
     },
