--- a/main-site/package.json
+++ b/main-site/package.json
@@ -7,22 +7,23 @@
     "type": "module",
     "dependencies": {
         "@enginehub/shared": "workspace:*",
-        "next": "^13.4.9",
+        "next": "^13.4.10",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "sharp": "^0.32.1",
+        "sharp": "^0.32.3",
         "smooth-scroll": "^16.1.3",
-        "styled-components": "^6.0.3"
+        "styled-components": "^6.0.4"
     },
     "devDependencies": {
-        "@next/eslint-plugin-next": "^13.4.9",
-        "@types/react": "18.2.14",
-        "@types/react-dom": "18.2.6",
-        "@typescript-eslint/eslint-plugin": "^5.61.0",
-        "@typescript-eslint/parser": "^5.61.0",
-        "eslint": "^8.44.0",
+        "@next/eslint-plugin-next": "^13.4.10",
+        "@types/react": "18.2.15",
+        "@types/react-dom": "18.2.7",
+        "@typescript-eslint/eslint-plugin": "^5.62.0",
+        "@typescript-eslint/parser": "^5.62.0",
+        "eslint": "^8.45.0",
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "postcss-preset-env": "^9.0.0",
         "prettier": "^3.0.0",
         "typescript": "^5.1.6"
     },
