--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,6 @@
 {
     "*.{ts,tsx}": [
-        "eslint --cache --config ../.eslintrc.cjs --fix",
+        "eslint --cache --config ./.eslintrc.cjs --fix",
         "prettier --parser typescript --write --config ./.prettierrc"
     ],
     "*.html": ["prettier --parser html --write --config ./.prettierrc"],
