--- a/shared/package.json
+++ b/shared/package.json
@@ -13,8 +13,8 @@
         "@types/node": "^18.16.19",
         "@types/react": "18.2.15",
         "@types/react-dom": "18.2.7",
-        "@typescript-eslint/eslint-plugin": "^5.62.0",
-        "@typescript-eslint/parser": "^5.62.0",
+        "@typescript-eslint/eslint-plugin": "^6.1.0",
+        "@typescript-eslint/parser": "^6.1.0",
         "eslint": "^8.45.0",
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
@@ -22,16 +22,11 @@
         "tslib": "^2.6.0",
         "typescript": "^5.1.6"
     },
-    "keywords": [
-        "enginehub",
-        "worldedit",
-        "worldguard",
-        "craftbook"
-    ],
+    "keywords": ["enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
         "type-check": "yarn tsc --project ./tsconfig.json --noEmit",
-        "lint": "eslint --config ./.eslintrc.js --ext .ts,.tsx src/",
-        "lint:fix": "eslint --config ./.eslintrc.js --fix --ext .ts,.tsx src/",
+        "lint": "eslint --ext .ts,.tsx src/",
+        "lint:fix": "eslint --fix --ext .ts,.tsx src/",
         "prepare": "yarn build",
         "build": "yarn tsc --project ./tsconfig.json",
         "watch": "yarn build --watch"
