--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -1,5 +1,5 @@
 {
     "extends": "../tsconfig.json",
-    "include": ["./src/**/*.ts"],
+    "include": ["./src/**/*"],
     "exclude": ["dist"]
 }
