--- a/main-site/package.json
+++ b/main-site/package.json
@@ -11,8 +11,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "sharp": "^0.32.3",
-        "smooth-scroll": "^16.1.3",
-        "styled-components": "^6.0.4"
+        "smooth-scroll": "^16.1.3"
     },
     "devDependencies": {
         "@next/eslint-plugin-next": "^13.4.10",
