chore: update linting setup

--- a/golf/package.json
+++ b/golf/package.json
@@ -13,7 +13,7 @@
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@google-cloud/firestore": "^7.9.0",
         "bcrypt": "^5.1.1",
-        "got": "^13.0.0",
+        "got": "^14.4.2",
         "gzip-js": "^0.3.2",
         "jsonwebtoken": "^9.0.2",
         "next": "^14.2.5",
@@ -32,8 +32,7 @@
         "@types/react-dom": "18.3.0",
         "@types/safe-compare": "^1.1.2",
         "@types/shortid": "^0.0.32",
-        "eslint": "^8.57.0",
-        "eslint-config-next": "^14.2.5",
+        "eslint": "^9.9.0",
         "postcss-preset-env": "^10.0.0",
         "prettier": "^3.3.3",
         "typescript": "^5.5.4"
@@ -44,7 +43,7 @@
         "build": "yarn next build",
         "start": "yarn next start",
         "type-check": "yarn tsc --project ./tsconfig.json --noEmit",
-        "lint": "yarn next lint",
-        "lint:fix": "yarn next lint --fix"
+        "lint": "eslint src/ pages/",
+        "lint:fix": "yarn lint --fix"
     }
 }
