--- a/shared/package.json
+++ b/shared/package.json
@@ -9,15 +9,10 @@
     "types": "./src/index.ts",
     "type": "module",
     "devDependencies": {
-        "@next/eslint-plugin-next": "^14.2.5",
         "@types/node": "^20.14.15",
         "@types/react": "18.3.3",
         "@types/react-dom": "18.3.0",
-        "@typescript-eslint/eslint-plugin": "^6.21.0",
-        "@typescript-eslint/parser": "^6.21.0",
-        "eslint": "^8.57.0",
-        "eslint-plugin-react": "^7.34.3",
-        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint": "^9.9.0",
         "prettier": "^3.3.3",
         "tslib": "^2.6.3",
         "typescript": "^5.5.4"
@@ -25,8 +20,8 @@
     "keywords": ["enginehub", "worldedit", "worldguard", "craftbook"],
     "scripts": {
         "type-check": "yarn tsc --project ./tsconfig.json --noEmit",
-        "lint": "eslint --ext .ts,.tsx src/",
-        "lint:fix": "eslint --fix --ext .ts,.tsx src/",
+        "lint": "eslint src/",
+        "lint:fix": "eslint --fix src/",
         "prepare": "yarn build",
         "build": "yarn tsc --project ./tsconfig.json",
         "watch": "yarn build --watch"
