--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,6 @@
 {
-    "*.{ts,tsx}": [
-        "eslint --cache --config ./.eslintrc.cjs --fix",
+    "*.{ts,tsx,js,cjs,mjs}": [
+        "eslint --cache --config eslint.config.js --fix",
         "prettier --parser typescript --write --config ./.prettierrc"
     ],
     "*.html": ["prettier --parser html --write --config ./.prettierrc"],
