--- a/builds/package.json
+++ b/builds/package.json
@@ -10,7 +10,7 @@
         "@fortawesome/fontawesome-svg-core": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
-        "got": "^13.0.0",
+        "got": "^14.4.2",
         "moment": "^2.30.1",
         "next": "^14.2.5",
         "react": "^18.3.1",
@@ -21,8 +21,7 @@
         "@types/node": "^20.14.15",
         "@types/react": "18.3.3",
         "@types/react-dom": "18.3.0",
-        "eslint": "^8.57.0",
-        "eslint-config-next": "^14.2.5",
+        "eslint": "^9.9.0",
         "postcss-preset-env": "^10.0.0",
         "prettier": "^3.3.3",
         "typescript": "^5.5.4"
@@ -34,7 +33,7 @@
         "build": "yarn next build",
         "start": "yarn next start -p $PORT",
         "type-check": "yarn tsc --project ./tsconfig.json --noEmit",
-        "lint": "yarn next lint",
-        "lint:fix": "yarn next lint --fix"
+        "lint": "eslint src/ pages/",
+        "lint:fix": "yarn lint --fix"
     }
 }
