--- a/main-site/package.json
+++ b/main-site/package.json
@@ -14,14 +14,9 @@
         "smooth-scroll": "^16.1.3"
     },
     "devDependencies": {
-        "@next/eslint-plugin-next": "^14.2.5",
         "@types/react": "18.3.3",
         "@types/react-dom": "18.3.0",
-        "@typescript-eslint/eslint-plugin": "^6.21.0",
-        "@typescript-eslint/parser": "^6.21.0",
-        "eslint": "^8.57.0",
-        "eslint-plugin-react": "^7.34.3",
-        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint": "^9.9.0",
         "postcss-preset-env": "^10.0.0",
         "prettier": "^3.3.3",
         "typescript": "^5.5.4"
@@ -34,7 +29,7 @@
         "start": "yarn next start",
         "test": "echo \"Write tests!\"",
         "type-check": "yarn tsc --project ./tsconfig.json --noEmit",
-        "lint": "yarn next lint",
-        "lint:fix": "yarn next lint --fix"
+        "lint": "eslint src/ pages/",
+        "lint:fix": "yarn lint --fix"
     }
 }
