--- a/package.json
+++ b/package.json
@@ -24,6 +24,17 @@
     },
     "packageManager": "yarn@4.3.1",
     "devDependencies": {
+        "@eslint/compat": "^1.1.1",
+        "@next/eslint-plugin-next": "^14.2.5",
+        "eslint-config-next": "^14.2.5",
+        "eslint-import-resolver-typescript": "^3.6.1",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-react": "^7.35.0",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint-plugin-simple-import-sort": "^12.1.1",
+        "eslint-plugin-sonarjs": "^1.0.4",
+        "eslint-plugin-unicorn": "^55.0.0",
+        "typescript-eslint": "^8.0.1",
         "typescript-plugin-css-modules": "^5.1.0"
     }
 }
